force-app/main/default/objects/leaseworks__PDP_Structure_Line__c/leaseworks__PDP_Structure_Line__c.object-meta.xml
<CustomObject>
    <label>Z_Unused_PDP Structure Line</label>
    <nameField>
        <label>PDP Structure Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Z_Unused_PDP Structure Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>