force-app/main/default/objects/leaseworks__PDP_Structure_Line__c/fields/leaseworks__Fixed_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Fixed_Date__c</fullName>
    <label>Fixed Date</label>
    <type>Date</type>
</CustomField>