force-app/main/default/objects/leaseworks__PDP_Structure_Line__c/fields/leaseworks__Month_Prior_Delivery__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Month_Prior_Delivery__c</fullName>
    <label>Z_Unused_2012 Months Prior Delivery</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>