force-app/main/default/objects/leaseworks__PDP_Structure_Line__c/fields/leaseworks__Order_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Order_Date__c</fullName>
    <formula>IF( 
RecordType.DeveloperName = &#39;Variable&#39; 
,
   IF(
 leaseworks__Signature__c,
 DATE(2000,01,01),
 ADDMONTHS(DATE(2100,01,01), leaseworks__Month_Prior_Delivery__c *-1)
 )
,
   IF(
 leaseworks__Signature__c,
 DATE(2000,01,01),
 leaseworks__Fixed_Date__c 
 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Date</label>
    <type>Date</type>
</CustomField>