force-app/main/default/objects/leaseworks__PDP_Structure_Line__c/fields/leaseworks__Payment__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Payment__c</fullName>
    <description>Predelivery Payment Schedule over gross price.</description>
    <label>Payment %</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>