force-app/main/default/objects/leaseworks__PDP_Structure_Line__c/fields/leaseworks__PaymentNum__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__PaymentNum__c</fullName>
    <label>Payment #</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>