force-app/main/default/objects/leaseworks__PDP_Structure_Line__c/recordTypes/leaseworks__Fixed.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Fixed</fullName>
    <active>true</active>
    <description>The Amount($) and Date of his type of Payment is fixed for every PDP using this Structure.</description>
    <label>Fixed</label>
</RecordType>