force-app/main/default/objects/leaseworks__PDP_Structure_Line__c/recordTypes/leaseworks__Variable.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Variable</fullName>
    <active>true</active>
    <description>The Amount($) of his type of Payment is determined by a percentage of the Total PDP. The date of the payment is determined by the Months until delivery</description>
    <label>Variable</label>
</RecordType>