force-app/main/default/objects/leaseworks__PDP_Structure_Line__c/validationRules/leaseworks__Fixed_Payment_Validations_01.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Fixed_Payment_Validations_01</fullName>
    <active>true</active>
    <description>Validates that the Fixed Payment is greater than 0</description>
    <errorConditionFormula>leaseworks__Fixed_Payment__c  &lt;= 0</errorConditionFormula>
    <errorDisplayField>leaseworks__Fixed_Payment__c</errorDisplayField>
    <errorMessage>The Fixed Payment must be greater than 0.</errorMessage>
</ValidationRule>