force-app/main/default/objects/leaseworks__PDP_Structure_Line__c/validationRules/leaseworks__Fixed_Payment_Validations_02.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Fixed_Payment_Validations_02</fullName>
    <active>true</active>
    <description>Throws an error if both % Payment and Fixed Payment are null.</description>
    <errorConditionFormula>AND(
 ISNULL(leaseworks__Fixed_Payment__c),
 ISNULL(leaseworks__Payment__c)
)</errorConditionFormula>
    <errorDisplayField>leaseworks__Fixed_Payment__c</errorDisplayField>
    <errorMessage>Fixed Payment or % Payment must be defined.</errorMessage>
</ValidationRule>