force-app/main/default/objects/leaseworks__PDP_Structure_Line__c/validationRules/leaseworks__Fixed_Payment_Validations_03.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Fixed_Payment_Validations_03</fullName>
    <active>true</active>
    <description>Checks that a Date is especified if it is a Fixed Payment and is not on Signature.</description>
    <errorConditionFormula>AND(
 RecordType.DeveloperName = &apos;Fixed&apos;,
 ISNULL(leaseworks__Fixed_Date__c),
 NOT(leaseworks__Signature__c)
)</errorConditionFormula>
    <errorDisplayField>leaseworks__Fixed_Date__c</errorDisplayField>
    <errorMessage>You must especify a Date for Fixed Payments.</errorMessage>
</ValidationRule>