force-app/main/default/objects/leaseworks__PDP_Structure_Line__c/validationRules/leaseworks__Payment_Percentage_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Payment_Percentage_Validation</fullName>
    <active>true</active>
    <description>Validates that the Percent Payment is greater than 0.</description>
    <errorConditionFormula>leaseworks__Payment__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>leaseworks__Payment__c</errorDisplayField>
    <errorMessage>The Payment Percentage must be greater than 0</errorMessage>
</ValidationRule>