force-app/main/default/objects/leaseworks__PDP_Structure_Line__c/validationRules/leaseworks__Validate_no_Fixed_Date_on_Signature.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Validate_no_Fixed_Date_on_Signature</fullName>
    <active>true</active>
    <description>Validates that there is no Fixed Date specified when creating a Signature Fixed Payment</description>
    <errorConditionFormula>AND( 
NOT(ISNULL(leaseworks__Fixed_Date__c)), 
leaseworks__Signature__c
)</errorConditionFormula>
    <errorDisplayField>leaseworks__Fixed_Date__c</errorDisplayField>
    <errorMessage>You can&apos;t specify a Fixed Date for a Signature Payment</errorMessage>
</ValidationRule>